UPDATE: match all doesn't catch localhost :S

--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,7 @@
 ---
 - name: Provision dev server
   become: true
-  hosts: all
+  hosts: localhost
 
   roles:
     - base # packages used for everything else
