ADD: Missing deps

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -16,6 +16,7 @@
       'build-essential',
       'dconf-cli',
       'gcc-6',
+      'cmake',
       'libffi-dev',
       'libgdbm-dev',
       'libgdbm5',
@@ -36,11 +37,14 @@
       'dos2unix',
       'git',
       'gitg',
+      'htop',
       'net-tools',
+      'p7zip-full',
       'peco',
       'redis-server',
       's3cmd',
       'silversearcher-ag',
+      'sqlite3',
       'tmux',
       'tree',
       'uchardet',
