--- a/roles/neovim/tasks/main.yml
+++ b/roles/neovim/tasks/main.yml
@@ -1,18 +1,7 @@
 ---
-- name: Neovim Repository
-  apt_repository:
-    repo: ppa:neovim-ppa/stable
 
-- name: Install packages
-  apt:
-    update_cache: yes
-    name: [
-      'python-dev',
-      'python-pip',
-      'python3-dev',
-      'python3-pip',
-      'neovim'
-    ]
+- include_tasks: setup-debian.yml
+  when: ansible_os_family == 'Debian'
 
 - name: Add nodejs support
   command: npm install -g neovim
@@ -43,14 +32,3 @@
     dest: ~/.config/nvim/init.vim
     state: link
     force: yes
-
-- name: update alternatives
-  alternatives:
-    name: "{{ item }}"
-    path: /usr/bin/nvim
-    priority: 60
-  with_items:
-    - vi
-    - vim
-    - editor
-
