--- a/roles/postgresql/tasks/main.yml
+++ b/roles/postgresql/tasks/main.yml
@@ -1,37 +1,23 @@
-- name: Add PostgreSQL repository key
-  apt_key:
-    url: https://www.postgresql.org/media/keys/ACCC4CF8.asc
+- include_tasks: setup-debian.yml
+  when: ansible_os_family == 'Debian'
+
+- name: Register postgres status
+  ansible.builtin.shell: brew services info postgresql@{{ version }} --json | jq ".[].running?"
+  register: postgresql_running
+
+- name: Start postgresql
+  command: brew services start postgresql
+  when: (ansible_os_family == "Darwin") and (not postgresql_running | bool)
+
+- name: Make sure psycopg2 is installed
+  pip:
+    name: psycopg2
     state: present
-
-- name: Add PostgreSQL repository
-  apt_repository:
-    repo: "{{ repo }}"
-    state: present
-
-- name: Update apt cache
-  apt:
-    update_cache: yes
-
-- name: Install PostgreSQL server
-  apt:
-    name: [
-      "postgresql-{{ version }}",
-      "postgresql-client-{{ version }}",
-      'libpq-dev'
-    ]
-
-- name: Copy PostgreSQL config
-  copy:
-    src: "{{ item }}"
-    dest: "/etc/postgresql/{{ version }}/main/{{ item }}"
-    backup: yes
-  with_items:
-  - pg_hba.conf
-  notify: restart postgresql
 
 - name: DB user
-  become_user: postgres
   postgresql_user:
+    login_user: "{{ lookup('env', 'USER') }}"
+    db: postgres
     name: "{{ db_user }}"
     password: "{{ db_password }}"
     role_attr_flags: SUPERUSER
