--- a/playbook.yml
+++ b/playbook.yml
@@ -2,25 +2,12 @@
 - hosts: all
   name: Provision dev server
 
-  vars_files:
-    - variables.yml
-
-
-  tasks:
-    - import_tasks: tasks/sudoers.yml
-      when: configure_sudoers
-      tags: ['sudoers']
-    - import_tasks: tasks/osx.yml
-      when: configure_osx
-      tags: ['osx']
+- import_playbook: macos.yml
+  when: ansible_os_family == "Darwin"
+- import_playbook: debian.yml
+  when: ansible_os_family == "Debian"
 
   roles:
-    - role: elliotweiser.osx-command-line-tools
-    - role: geerlingguy.mac.homebrew
-      tags: ['homebrew']
-    - role: geerlingguy.mac.dock
-      when: configure_dock
-      tags: ['dock']
-    - role: "./postgresql"
-    - role: "./rbenv"
-    - role: "./neovim"
+    - postgresql
+    - rbenv
+    - neovim
