--- a/roles/rbenv/tasks/main.yml
+++ b/roles/rbenv/tasks/main.yml
@@ -12,6 +12,7 @@
   lineinfile:
     dest: ~/.bashrc
     state: present
+    create: true
     regexp: 'rbenv.sh$'
     line: 'source ~/.rbenv.sh'
 
