--- a/roles/neovim/tasks/setup-debian.yml
+++ b/roles/neovim/tasks/setup-debian.yml
@@ -1,19 +1,14 @@
-- name: Neovim Repository
-  apt_repository:
-    repo: ppa:neovim-ppa/stable
-
 - name: Install packages
+  become: true
   apt:
     update_cache: yes
     name: [
-      'python-dev',
-      'python-pip',
-      'python3-dev',
-      'python3-pip',
-      'neovim'
+      'neovim',
+      'python3-neovim'
     ]
 
 - name: update alternatives
+  become: true
   alternatives:
     name: "{{ item }}"
     path: /usr/bin/nvim
@@ -21,3 +16,18 @@
   with_items:
     - editor
 
+- name: Global conf node pt1
+  file:
+    path: ~/.npm-global
+    state: directory
+
+- name: Config node to install global
+  shell: npm config set prefix '~/.npm-global'
+
+- name: add folder to path
+  lineinfile:
+    dest: ~/.bashrc
+    state: present
+    create: true
+    regexp: '^export PATH=~/.npm-global'
+    line: 'export PATH=~/.npm-global/bin:$PATH'
