--- a/roles/ohmyzsh/tasks/main.yml
+++ b/roles/ohmyzsh/tasks/main.yml
@@ -1,33 +1,35 @@
 - name: Install zsh
+  become: true
   apt:
     name: zsh
 
+- name: Install pexpect
+  become: true
+  apt:
+    name: python3-pexpect
+
 - name: Clone OhmyZsh
-  become: false
   git:
     repo: https://github.com/robbyrussell/oh-my-zsh.git 
     dest: ~/.oh-my-zsh
     accept_hostkey: yes
 
 - name: Clone fish like autosuggestions
-  become: false
   git:
     repo: https://github.com/zsh-users/zsh-autosuggestions
     dest: ~/.oh-my-zsh/custom/plugins/zsh-autosuggestions
     accept_hostkey: yes
 
 - name: Clone fish like syntax highlighting
-  become: false
   git:
     repo: https://github.com/zsh-users/zsh-syntax-highlighting.git
     dest: ~/.oh-my-zsh/custom/plugins/zsh-syntax-highlighting
     accept_hostkey: yes
 
 - name: Default shell
-  become: false
   expect:
     command: "chsh -s /usr/bin/zsh"
     responses:
-      Password:
+      (?i)password:
         - "{{ user_password }}"
     creates: ".shell_is_zsh"
