--- a/roles/yarn/tasks/main.yml
+++ b/roles/yarn/tasks/main.yml
@@ -1,12 +1,15 @@
 ---
 - name: Configure the Yarn APT key
+  become: true
   apt_key:
     url: https://dl.yarnpkg.com/debian/pubkey.gpg
 
 - name: Add Yarn repository
+  become: true
   apt_repository:
     repo: 'deb https://dl.yarnpkg.com/debian/ stable main'
 
 - name: Install Yarn
+  become: true
   apt:
     name: yarn
