--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,6 @@
 ---
 - hosts: all
   name: Provision dev server
-
   tasks:
     - block:
         - name: Include variables from a file
@@ -23,7 +22,6 @@
           loop:
             - elliotweiser.osx-command-line-tools
             - geerlingguy.mac.homebrew
-            - geerlingguy.mac.mas
             - geerlingguy.mac.dock
       when: ansible_os_family == "Darwin"
 
@@ -31,14 +29,37 @@
       include_tasks: debian/setup-debian.yml
       when: ansible_os_family == "Debian"
 
-  roles:
-    - rust
-    - role: debian/roles/base
+    - name: Include rust role
+      include_role:
+        name: rust
       when: ansible_os_family == "Debian"
-    - role: roles/yarn
+
+    - name: Include base role
+      include_role:
+        name: debian/roles/base
       when: ansible_os_family == "Debian"
-    - nvm
-    - rbenv
-    - ohmyzsh
-    - neovim
-    - dotfiles
+
+    - name: Include yarn role
+      include_role:
+        name: roles/yarn
+      when: ansible_os_family == "Debian"
+
+    - name: Include nvm role
+      include_role:
+        name: nvm
+
+    - name: Include rbenv role
+      include_role:
+        name: rbenv
+
+    - name: Include ohmyzsh role
+      include_role:
+        name: ohmyzsh
+
+    - name: Include neovim role
+      include_role:
+        name: neovim
+
+    - name: Include dotfiles role
+      include_role:
+        name: dotfiles
