--- a/macos/variables.yml
+++ b/macos/variables.yml
@@ -19,7 +19,6 @@ mas_installed_apps:
   - { id: 1462114288, name: 'Grammarly for Safari' }
   - { id: 1475303629, name: 'Dear Reader' }
   - { id: 1480933944, name: 'Vimari' }
-  - { id: 1482920575, name: 'DuckDuckGo Privacy for Safari' }
   - { id: 1484348796, name: 'Endel' }
   - { id: 408981434, name: "iMovie" }
   - { id: 409183694, name: "Keynote" }
@@ -35,10 +34,11 @@ mas_installed_apps:
   - { id: 682658836, name: "GarageBand" } 
   - { id: 747648890, name: 'Telegram' }
   - { id: 775737590, name: 'iA Writer' }
-  - { id: 779363176, name: 'House Designer' }
-  - { id: 823766827, name: 'OneDrive' }
   - { id: 961632517, name: 'Be Focused Pro: Pomodoro Timer' }
 mas_upgrade_all_apps: true
+
+homebrew_taps:
+  - d12frosted/emacs-plus
 
 homebrew_installed_packages:
   - ansible
@@ -46,6 +46,7 @@ homebrew_installed_packages:
   - bash-completion
   - bat
   - bison
+  - { name: emacs-plus, install_options: "with-dbus,with-debug,with-mailutils,with-xwidgets,with-imagemagick,with-c9rgreen-sonoma-icon" }
   - cmake
   - cowsay
   - git-delta
@@ -73,13 +74,12 @@ homebrew_installed_packages:
   - libevent
   - fzf
   - zoxide
-  - exa
+  - eza
   - zsh-autosuggestions
   - libpq
   - libwebm
   - lsusb
   - mas
-  - mcrypt
   - mysql
   - mosh
   - nmap
@@ -114,29 +114,21 @@ homebrew_installed_packages:
   - viu
   - wget
   - whois
-  # - wkhtmltopdf
   - wrk
   - yarn
   - zip
   - zsh-history-substring-search
   - zsh-syntax-highlighting
 
-homebrew_taps:
-  - homebrew/core
-  - homebrew/cask
-  - homebrew/cask-fonts
-
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
+  - alacritty
   - alt-tab
   - chromedriver
-  - firefox
+  - docker
   - handbrake
   - licecap
-  - sublime-text
-  - dbeaver-community
   - postman
-  - insomnia
 
 configure_dock: true
 dockitems_remove:
@@ -145,8 +137,8 @@ dockitems_remove:
   - Reminders
 
 dockitems_persist:
-  - name: "iTerm"
-    path: "/Applications/iTerm.app/"
+  - name: "Alacritty"
+    path: "/Applications/Alacritty.app/"
     pos: 1
   - name: "Licecap"
     path: "/Applications/Licecap.app/"
