Migrate from rbenv/nvm to asdf and fix path portability
## asdf Migration

Replace rbenv (Ruby) and nvm (Node.js) with asdf for unified language
version management across all development tools.

### Added:
- New roles/asdf/ role with complete implementation:
  - Support for 14 languages: Ruby, Node.js, Erlang, Elixir, Java,
    Python, R, Zig, .NET, Istio, Maven, Gradle, Go, Rust
  - Plugin installation and version management
  - Shell integration (.bashrc/.zshrc)
  - Default package management for Ruby, Node.js, Python, Elixir, Go, Rust
  - Support for copying existing .tool-versions file
  - 6 Jinja2 templates for default packages
- Design documentation: docs/plans/2026-01-07-asdf-migration-design.md
- Added asdf to homebrew packages

### Removed:
- roles/rbenv/ - Replaced by asdf
- roles/nvm/ - Replaced by asdf
- Removed rbenv and nvm from homebrew packages

### Modified:
- playbook.yml: Replace nvm and rbenv role inclusions with asdf
- roles/neovim/tasks/main.yml: Use asdf shims instead of rbenv sourcing

## Path Portability Fixes

Replace all hardcoded paths and tilde expansion with dynamic
ansible_env.HOME variable for cross-platform and cross-user portability.

### Benefits:
- Works on macOS with any username
- Works on Linux with any username
- No hardcoded /Users/jvargas paths
- Playbooks now portable across different machines and users

### Files Updated:
- playbook.yml: local_tool_versions_path now uses {{ ansible_env.HOME }}
- macos/variables.yml: downloads path now dynamic
- roles/neovim/tasks/main.yml: All config paths now dynamic
- roles/neovim/tasks/setup-debian.yml: npm-global and bashrc paths now dynamic
- roles/asdf/defaults/main.yml: Updated example comment

--- a/macos/variables.yml
+++ b/macos/variables.yml
@@ -1,5 +1,5 @@
 ---
-downloads: ~/Downloads/ansible
+downloads: "{{ ansible_env.HOME }}/Downloads/ansible"
 
 configure_osx: true
 configure_sudoers: false
@@ -85,7 +85,6 @@ homebrew_installed_packages:
   - nmap
   - node
   - nvim
-  - nvm
   - openssl
   - openssl@3
   - p7zip
@@ -93,7 +92,7 @@ homebrew_installed_packages:
   - php
   - postgresql
   - pv
-  - rbenv
+  - asdf
   - readline
   - redis
   - ripgrep
