Add .tool-versions template fallback for portability
Fix error when local .tool-versions file doesn't exist on target machine.
The role now supports both approaches as originally designed:

1. Copy existing .tool-versions if provided and exists
2. Template from default versions if not provided or doesn't exist

Changes:
- Add asdf_versions dict with sensible defaults in defaults/main.yml
  - Ruby 3.3.0, Node.js 20.11.0, Python 3.12.1, Go 1.21.6, etc.
  - Optional languages (r, zig, dotnet, etc.) empty by default
- Create tool-versions.j2 template for generating .tool-versions
- Update versions.yml task logic:
  - Check if local file exists before trying to copy
  - Use template when local file not provided or doesn't exist
  - Cleaner boolean logic with should_copy_tool_versions flag

This fixes the error:
  "Could not find or access '/Users/afromankenobi/.tool-versions'"

Now the role works out-of-box on any machine without requiring an
existing .tool-versions file, while still supporting copying a custom
one when available.

--- a/roles/asdf/tasks/versions.yml
+++ b/roles/asdf/tasks/versions.yml
@@ -5,16 +5,30 @@
   set_fact:
     use_local_tool_versions: "{{ local_tool_versions_path | length > 0 }}"
 
+- name: Check if local .tool-versions file exists on controller
+  stat:
+    path: "{{ local_tool_versions_path }}"
+  register: local_tool_versions_stat
+  delegate_to: localhost
+  when: use_local_tool_versions
+
+- name: Determine if we should copy or template
+  set_fact:
+    should_copy_tool_versions: "{{ use_local_tool_versions and local_tool_versions_stat.stat.exists | default(false) }}"
+
 - name: Copy existing .tool-versions file
   copy:
     src: "{{ local_tool_versions_path }}"
     dest: "{{ ansible_env.HOME }}/.tool-versions"
     mode: '0644'
-  when: use_local_tool_versions
+  when: should_copy_tool_versions
 
-# TODO: Template generation from variables if local_tool_versions_path not provided
-# This would require defining version variables in defaults/main.yml
-# For now, we assume the user provides their .tool-versions file
+- name: Template .tool-versions from variables
+  template:
+    src: tool-versions.j2
+    dest: "{{ ansible_env.HOME }}/.tool-versions"
+    mode: '0644'
+  when: not should_copy_tool_versions
 
 - name: Check if .tool-versions exists
   stat:
