i handle the asdf config via dotfiles :D

--- a/roles/asdf/defaults/main.yml
+++ b/roles/asdf/defaults/main.yml
@@ -1,52 +1,4 @@
 ---
 # asdf role default variables
-
-# List of asdf plugins to install
-asdf_plugins:
-  - ruby
-  - nodejs
-  - erlang
-  - elixir
-  - java
-  - python
-  - r
-  - zig
-  - dotnet
-  - istioctl
-  - maven
-  - gradle
-  - golang
-  - rust
-
-# Optional: Path to existing .tool-versions file to copy
-# If undefined, will template .tool-versions from variables
-# Example: local_tool_versions_path: "{{ ansible_env.HOME }}/.tool-versions"
-local_tool_versions_path: ""
-
-# Default versions for .tool-versions template (used when local_tool_versions_path not provided)
-# Set to empty string to skip that language in the template
-asdf_versions:
-  ruby: "3.3.0"
-  nodejs: "20.11.0"
-  erlang: "26.2.1"
-  elixir: "1.16.1"
-  java: "openjdk-21.0.2"
-  python: "3.12.1"
-  golang: "1.21.6"
-  rust: "1.75.0"
-  # Optional/less common languages - empty by default
-  r: ""
-  zig: ""
-  dotnet: ""
-  istioctl: ""
-  maven: ""
-  gradle: ""
-
-# Optional package lists can be defined in playbooks to supplement base packages
-# Example:
-# default_gems_optional:
-#   - rails
-#   - pry
-# default_npm_optional:
-#   - webpack
-#   - jest
+# This role only handles installation and shell configuration
+# Plugins, versions, and default packages are managed via dotfiles
